Fix for bug 243998 (Visiting the networkassociates, noggin, upromise crashes Mozilla & Firefox). r/sr=bz, a=tor.